@@ -6,6 +6,7 @@ package net.sourceforge.pmd.util.internal;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -129,8 +130,13 @@ public final class AnalysisClasspathUtil {
 
         if (classpath.startsWith("file:")) {
             try {
-                URL url = new URL(classpath);
-                Path path = Paths.get(url.getPath());
+                Path path;
+                if (classpath.length() > 5 && classpath.charAt(5) == '/') {
+                    path = Paths.get(new URI(classpath));
+                } else {
+                    // support relative paths
+                    path = Paths.get(classpath.substring(5));
+                }
 
                 try (Stream<String> lines = Files.lines(path, Charset.defaultCharset())) {
                     entries.addAll(lines
@@ -139,7 +145,7 @@ public final class AnalysisClasspathUtil {
                             .filter(s -> !s.startsWith("#"))
                             .collect(Collectors.toList()));
                 }
-            } catch (IOException e) {
+            } catch (IOException | URISyntaxException e) {
                 throw new IllegalArgumentException(e);
             }
         } else {
